Mon Jul 07 18:00:38 2003  Irfan Pyarali  <irfan@oomworks.com>

	* The following changes are related to improving memory management
	  of Event Handlers when they interact with Reactors (and Timer
	  Queues).  When a handler is registered with the Reactor, the
	  Reactor increments the reference count on the handler.  The
	  Reactor also increments this reference count when making upcalls
	  on the handler.  The reference count is decremented when an
	  upcall completes or when the handler is removed from the
	  Reactor.

	  This mechanism is similar to what happens between POAs and
	  Servants and it allows for the safe deletion of handlers.  This
	  mechanism is particularly need for multi-threaded applications
	  that can have multiple threads executing upcalls on a handler
	  that needs to be shutdown in a safe manner.  The following
	  illustrates an example of how this mechanism works:

	  - When a handler is created, it reference count is one. 
	  
	  - After the handler is registered with the Reactor, it reference
	  count becomes two.

	  - At this point, the handler creator can let go of the handler
	  reference, bringing down the reference count to one.

	  - For each thread executing upcalls on the handler, the Reactor
	  increments the reference count by one. So if three threads were
	  simultaneously making upcalls on a handler, the reference count
	  would be four.

	  - Assuming an external event (and thread) decides to close the
	  handler.  It simply removes the handler from the Reactor.  This
	  decreases the reference count to three.  

	  - As each thread completes their upcall, the reference reduces.

	  - Once the final thread exits the upcall, the reference reaches
	  zero, and the handler is finally deleted.	

	  This mechanism ensures that the handler is not deleted until the
	  final upcall thread exits the handler.  

	  Reference counting on handlers is optional and is disabled by