@@ -1731,6 +1731,7 @@ Jason Smith <jason@atdesk.com>
 Danta Cannarozzi <djc2@cse.wustl.edu>
 Valery Salamakha <ccapstan@bigpond.net.au>
 Marek Brudka <M.Brudka@elka.pw.edu.pl>
+Robin Farine <robin.farine@acn-group.ch>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
